<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaxPipes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="description">Media Controls</string>
    <string name="title_activity_stream_player">StreamPlayer</string>
    <string name="custom_panel_desc">Custom top info panel</string>
    <color name="black">#000000</color>
    <color name="white">#ffffff</color>
    <string name="source">Source</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="mobile">Mobile</string>    

</resources>
